# qa-automation-template

./: .gitignore  PORTFOLIO_SITE_GUIDE.md  PORTFOLIO_TEST_COVERAGE_MATRIX.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/clients/: __init__.py  http_client.py  winapp_client.py
src/core/: __init__.py  api_contract.py  config.py  driver_factory.py  hooks.py  schema.py  web_contract.py
src/mobile/: README.md  __init__.py
src/pages/: __init__.py  base_page.py  base_winapp.py  checkboxes_page.py  dropdown_page.py  dynamic_loading_page.py  example_page.py  notepad_page.py  portfolio_page.py  secure_area_page.py
src/qa_automation_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/api/: test_create_post.py  test_delete_post.py  test_filter_todos_by_completed.py  test_get_post_comments.py  test_get_posts.py  test_get_single_post.py  test_get_single_user.py  test_get_todos.py  test_get_users.py  test_post_lifecycle.py  test_response_quality.py  test_update_post.py
tests/reference/api/: test_create_post.py  test_delete_post.py  test_filter_posts_by_user.py  (+12 more)
tests/unit/: test_config_bool_parser.py  test_http_client_url_builder.py  test_schema_validate_list.py  test_schema_validate_schema.py
tests/web/: test_dropdown_select.py  test_home_page_heading.py  test_login_invalid.py  test_login_valid.py  test_logout.py  test_secure_area_access.py
tests/winapp/: conftest.py  test_notepad_launches.py  test_notepad_save_as_dialog.py  test_notepad_title_unsaved.py  test_notepad_type_text.py
(+20 files in other folders)
